# rl4pnc-survey

./: .gitignore  .gitignore.txt  .pre-commit-config.yaml  Agent_evaluation.ipynb  Bug_testing.py  Debug_Ray.py  LICENSE  README.md  Test_job.sh  agent_evaluation.sh  create_act_space.sh  create_env.sh  generate_data_split_days.sh  generate_data_train_val_test.sh  gitignore.txt  pyproject.toml  run_agent_analysis.sh  train_ppo_baseline.sh
configs/l2rpn_case14_sandbox/: RL_RL.yaml  RLv_RLv.yaml  RLv_argmax.yaml  RLv_sample.yaml  heuristics_configs.yaml  opponent_single_network_PPO.yaml  opponent_single_network_PPO_MAE_medha_reversed.yaml  ppo_baseline.yaml  ppo_baseline_batchjob.yaml  single_network_PPO.yaml  single_network_PPO_MAE_medha.yaml  single_network_PPO_MAE_medha_reversed.yaml  single_network_PPO_MAE_medha_reversed_per_day.yaml  single_network_PPO_MAE_tennet.yaml  single_network_PPO_no_prio.yaml
configs/l2rpn_case14_sandbox/archive/: opponent_single_network_PPO_MAE_medha_reversed.yaml  single_network_PPO_MAE_medha_reversed.yaml
configs/l2rpn_icaps_2021_large/: ppo_baseline.yaml  ppo_baseline_batchjob.yaml  ppo_baseline_with_opponent.yaml  single_network_PPO_MAE_tennet.yaml  single_network_PPO_MAE_tennet_two_days.yaml
configs/l2rpn_icaps_2021_small/: ppo_baseline.yaml  ppo_baseline_with_opponent.yaml
configs/rte_case14_realistic/: blazej.yaml  blazej_regular.yaml  blazej_single_agent.yaml  greedy.yaml  multi_network_MAE_medha.yaml  ppo_baseline.yaml  ppo_baseline_batchjob.yaml  ppo_baseline_with_opponent.yaml  ppo_hrl.yaml  single_network_PPO_MAE_medha.yaml  single_network_PPO_MAE_medha_filtered.yaml  single_network_PPO_MAE_medha_two_days.yaml  single_network_PPO_MAE_tennet.yaml  single_network_PPO_SAE_medha.yaml  vf_single_network_PPO.yaml
configs/rte_case5_example/: RL_RL_PPO.yaml  RL_capa_PPO.yaml  RL_random_PPO.yaml  RLv_RLv_PPO.yaml  RLv_argmax_PPO.yaml  RLv_sample.yaml  greedy_RL_PPO.yaml  greedy_agent_with_opponent.yaml  opponent_RLv_RLv_PPO.yaml  opponent_RLv_sample_PPO.yaml  opponent_greedy_RL.yaml  opponent_single_network_PPO.yaml  ppo_baseline.yaml  ppo_baseline_batchjob.yaml  ppo_baseline_with_opponent.yaml  ppo_hrl.yaml  ppo_hrl_with_opponent.yaml  single_network_PPO.yaml  single_network_PPO_MAE_tennet.yaml  single_network_PPO_MAE_tennet_per_day.yaml  vf_single_network_PPO.yaml
configs/rte_case5_example/archive/: ppo_baseline_with_opponent.yaml  ppo_hrl_with_opponent.yaml  single_network_PPO_MAE_tennet.yaml
experiments/: ppo_baseline.yaml
experiments/configurations/: ppo_baseline.yaml
notebooks/: Analyze_Agents.ipynb  CompareActions.ipynb  Figures_env_interact.ipynb  SurveyPaper_Boxplots.ipynb  SurveyPaper_OverviewTables.ipynb  SurveyPaper_TrainingCurves.ipynb  getting_started.ipynb  getting_started.py  introduction_rlib.ipynb  ppo_config.yaml  yaml_test.ipynb
scripts/: agent_evaluation.py  analyze_agent_behaviour.py  develop_action_spaces.py  evaluate_custom_model.py  faster_analysis.py  generate_per_day_scenarios.py  generate_scaling_array.py  generate_train_val_test_split.py  multiple_agent_analysis.py  replicate_blazej.py  summarize_evaluation_data.py  train_ppo_baseline.py  train_ppo_custom.py  train_ppo_hrl.py  train_ppo_rlv.py  train_ppo_single_agent.py  update_wandb.py
src/mahrl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+101 files in other folders)
